five september send final check